src/test/ui/llvm-asm/llvm-asm-parse-errors.stderr
error: macro requires a string literal as an argument
  --> $DIR/llvm-asm-parse-errors.rs:5:5
   |
LL |     llvm_asm!();
   |     ^^^^^^^^^^^ string literal required

error: expected string literal
  --> $DIR/llvm-asm-parse-errors.rs:6:23
   |
LL |     llvm_asm!("nop" : struct);
   |                       ^^^^^^ not a string literal

error: expected string literal
  --> $DIR/llvm-asm-parse-errors.rs:7:35
   |
LL |     llvm_asm!("mov %eax, $$0x2" : struct);
   |                                   ^^^^^^ not a string literal

error: expected `(`, found keyword `struct`
  --> $DIR/llvm-asm-parse-errors.rs:8:44
   |
LL |     llvm_asm!("mov %eax, $$0x2" : "={eax}" struct);
   |                                            ^^^^^^ expected `(`

error: expected expression, found keyword `struct`
  --> $DIR/llvm-asm-parse-errors.rs:9:44
   |
LL |     llvm_asm!("mov %eax, $$0x2" : "={eax}"(struct));
   |                                            ^^^^^^ expected expression

error: expected string literal
  --> $DIR/llvm-asm-parse-errors.rs:10:49
   |
LL |     llvm_asm!("in %dx, %al" : "={al}"(result) : struct);
   |                                                 ^^^^^^ not a string literal

error: expected `(`, found keyword `struct`
  --> $DIR/llvm-asm-parse-errors.rs:11:56
   |
LL |     llvm_asm!("in %dx, %al" : "={al}"(result) : "{dx}" struct);
   |                                                        ^^^^^^ expected `(`

error: expected expression, found keyword `struct`
  --> $DIR/llvm-asm-parse-errors.rs:12:56
   |
LL |     llvm_asm!("in %dx, %al" : "={al}"(result) : "{dx}"(struct));
   |                                                        ^^^^^^ expected expression

error: expected string literal
  --> $DIR/llvm-asm-parse-errors.rs:13:41
   |
LL |     llvm_asm!("mov $$0x200, %eax" : : : struct);
   |                                         ^^^^^^ not a string literal

error: expected string literal
  --> $DIR/llvm-asm-parse-errors.rs:14:50
   |
LL |     llvm_asm!("mov eax, 2" : "={eax}"(foo) : : : struct);
   |                                                  ^^^^^^ not a string literal

error: inline assembly must be a string literal
  --> $DIR/llvm-asm-parse-errors.rs:15:15
   |
LL |     llvm_asm!(123);
   |               ^^^

error: aborting due to 11 previous errors

